* Resurrect the perl interface to Lintel.
perl/CMakeLists.txt: All of the cmake code needed to build perl modules
  directly rather than using MakeMaker.  Deliberate choice to take advantage
  of linking support from cmake.

lintel.pl: unbelievably simple test program, but we're just testing it works at all.

xsubpp-cleanup: xsubpp .xs -> .c converter leaves some goop in the conversion that
  gets us warnings.  Clean them up.

src/CMakeLists.txt: Move all the subdir adding lower down so we can add them after
  we build the lintel library (needed for the perl subdir)

Lintel.pm: Fix up the module to be much simpler since it just needs to load LintelPerl.
  add minimal documentation.

LintelPerl.xs: rename from Lintel.xs so we can get libLintelPerl.so rather than libLintel.so
  which conflicts in name.  Remove a bunch of old bits, add in some more undefs to reduce
  conflicts, rename the module and add StatsQuantile.

Makefile.PL: no longer needed, drop.

typemap: add StatsQuantile type.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -61,10 +61,6 @@ SET(LIBLINTEL_SOURCES
 
 SET(LINTEL_FEATURES boost)
 
-################################## SUBDIRS
-
-ADD_SUBDIRECTORY(BatchParallel)
-
 ################################## PROGRAMS
 
 MACRO(LINTEL_SIMPLE_PROGRAM program_name)
@@ -75,8 +71,6 @@ ENDMACRO(LINTEL_SIMPLE_PROGRAM)
 
 LINTEL_SIMPLE_PROGRAM(calcStats)
 LINTEL_SIMPLE_PROGRAM(drawRandomLogNormal)
-
-ADD_SUBDIRECTORY(tests)
 
 ################################## PERL MODULES
 
@@ -165,6 +159,15 @@ ENDIF(LIBXML2_ENABLED)
 IF(BOOST_PROGRAM_OPTIONS_ENABLED)
     TARGET_LINK_LIBRARIES(Lintel ${BOOST_PROGRAM_OPTIONS_LIBRARIES})
 ENDIF(BOOST_PROGRAM_OPTIONS_ENABLED)
+
+################################## SUBDIRS
+
+ADD_SUBDIRECTORY(BatchParallel)
+IF(PERL_ENABLED)
+    ADD_SUBDIRECTORY(perl)
+ENDIF(PERL_ENABLED)
+
+ADD_SUBDIRECTORY(tests)
 
 ################################## INSTALL
 
