* Lots of fixes of optional dependency management.    * Add documentation about packages to install on various linux versions.
dependencies.txt: list of packages to install on fedora to do builds.

CMakeConfig.txt: Fix up the output messages about what is missing.

CMakeLists.txt: Print out a message at the end about dependencies.txt 

LintelDocs.cmake: Fix up message, add to anything not found list.

LintelFind.cmake: Make all the macros add something to a list of all 
  things that are not found.

deptool.in: Add detection of Fedora OS

perl/CMakeLists.txt: Make building the perl binary modules optional.

--- a/src/deptool.in
+++ b/src/deptool.in
@@ -3171,6 +3171,8 @@ sub operatingSystem {
             chomp;
             if (/^Red Hat Enterprise Linux.+release (\d+)\b/o) {
                 $Cache::operating_system = "rhel$1";
+	    } elsif (/^Fedora release (\d+) \(\w+\)$/o) {
+		$Cache::operating_system = "fedora$1";
             } else {
                 s/\W/_/go; s/\s/_/go;
                 $Cache::operating_system = "rh-unknown-$_";
