lintel-disktool.in: change "die" to "warn" so that we can make the list of   drives when we have none in the configuration.

--- a/src/lintel-disktool.in
+++ b/src/lintel-disktool.in
@@ -279,7 +279,7 @@ sub findDrives {
 	}
     }
     print "\n";
-    die "Unable to find any drives for tracing; ignored: " . join(" ", @{$config{not_used_drives}})
+    warn "Unable to find any drives for tracing; ignored: " . join(" ", @{$config{not_used_drives}})
 	unless @Global::drives;
     if (@no_id_info) {
 	print "Unable to get sginfo -s or sysfs info on: ", join(", ", @no_id_info), "\n";
