* [BUGFIX] fork rate was limited to 10/s because signals weren't      interrupting the select.
test-lintel-processmanager.pl: Verify that we can fork fast enough.

ProcessManager.pm: Set a child signal handler so that we will get a signal and
  interrupt the select when children exit.

src/tests/CMakeLists.txt: new test case

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -56,6 +56,7 @@ ADD_TEST(test_util ${CMAKE_CURRENT_SOURCE_DIR}/run-check-test-util.sh)
 IF(PERL_ENABLED)
     ADD_TEST(deptool-env env PERL5LIB=${Lintel_SOURCE_DIR}/src:${CMAKE_INSTALL_PREFIX}/share/perl5:$ENV{PERL5LIB} ${CMAKE_CURRENT_BINARY_DIR}/../deptool getenv for-sh)
     ADD_TEST(deptool-help-init env PERL5LIB=${Lintel_SOURCE_DIR}/src:${CMAKE_INSTALL_PREFIX}/share/perl5:$ENV{PERL5LIB} ${CMAKE_CURRENT_BINARY_DIR}/../deptool help init)
+    ADD_TEST(lintel-processmanager env PERL5LIB=${Lintel_SOURCE_DIR}/src:${CMAKE_INSTALL_PREFIX}/share/perl5:$ENV{PERL5LIB} perl ${CMAKE_CURRENT_SOURCE_DIR}/test-lintel-processmanager.pl)
 ENDIF(PERL_ENABLED)
 
 IF(LINTEL_DBI_ENABLED)
