--- a/src/lintel-disktool.in
+++ b/src/lintel-disktool.in
@@ -441,6 +441,7 @@ sub formatDrives {
 	my $label = getPartitionLabel($partition);
 	print "($partition, $label)" if $config{debug};
 
+	my $path = call('label_to_mount_path', $label, $config{all_drives}->{$drive});
 	if ($label ne '' && $label =~ /^\w{1,12}$/o) {
 	    $label_to_partition{$label} = $partition;
 	}
