--- a/src/deptool.in
+++ b/src/deptool.in
@@ -1696,22 +1696,28 @@ sub setPin {
 
 =pod
 
-=head2 pull
+=head2 pull [--unsafe]
 
-If you want to update your local repositories and projects, but aren't
-yet ready to make your changes available or just want changes other
-people have made, then pull is the command you want to use.  Pull will
-walk all of the directories dependent on your current directory and
-will pull data from the central server and then update the local
-directory.  If you happen to have outstanding changes, pull will
-perform a commit before doing the update so that you wouldn't
-accidentally destroy your current changes.
+If you want to update your local repositories and projects, but aren't yet
+ready to make your changes available or just want changes other people have
+made, then pull is the command you want to use.  Pull will walk all of the
+directories dependent on your current directory and will pull data from the
+central server and then update the local directory.  If you happen to have
+outstanding changes, pull will normally perform a commit before doing the
+update so that you wouldn't accidentally destroy your current changes.  If you
+are sure that you want to pull despite having changes, you can use the --unsafe
+option.
 
 =cut
 
 sub depPull {
     my %options;
-    depWalk(\&depPullCheckClean, sub { depPullOne(\%options); }, 0);
+
+    my $ret = GetOptions("unsafe!" => \$options{unsafe_pull_with_changes});
+    usage("unknown options to pull") unless $ret;
+
+    depWalk(sub { depPullCheckClean(\%options) },
+	    sub { depPullOne(\%options); }, 0);
 }
 
 ### sets $options->{made_changes} if we made changes.
@@ -1719,7 +1725,7 @@ sub depPull {
 sub depPullOne {
     my($options) = @_;
 
-    depCommitOne();
+    depCommitOne() unless $options->{unsafe_pull_with_changes};
     mtnOp("pull");
     depPullMerge();
     depPullUpdate($options);
@@ -1746,7 +1752,7 @@ sub depPullUpdate {
     if (-f $deppin_filename) {
         my @heads = getCurHeads();
         die "??" unless @heads == 1;
-        
+
         if (foundPin($cur_rev, $heads[0])) {
 	    print << "END";
 ****
@@ -1834,7 +1840,11 @@ sub depPinFilename {
 }
 
 sub depPullCheckClean {
+    my ($options) = @_;
+
+    return if $options->{unsafe_pull_with_changes};
     my $cwd = aliasGetCwd();
+
     if (depCommitHaveUnknown()) {
 	die "You have unknown files in $cwd
 Requiring you to commit first. Aborting.\n";
@@ -1932,7 +1942,7 @@ sub depCommitGetUnknown {
     my @unknown = <$fh>;
     close($fh);
     die "?? mtn" if $?;
-    
+
     return @unknown;
 }
 
@@ -1949,7 +1959,7 @@ sub depCommitHaveChanges {
     return 1 if defined $_;
     return 0;
 }
-    
+
 sub depCommitDoCommit {
     my %options = @_;
     my $cwd = aliasGetCwd();
@@ -1960,6 +1970,7 @@ sub depCommitDoCommit {
                 if $first_time;
             return;
         }
+
         $auto_yes_to_prompts = 0 unless $first_time;
         $first_time = 0;
         print "depcommit: you have uncommitted differences in $cwd
